1.15.0 (released xx.xx.xxxx)

* Added support for LZ4 archives with the lz4 tool.
  Closes: GH bug #46


1.14.1 (released 26.10.2023)

* Fix wrong option in bzip3, and add tests.
  Closes: GH bug #134
* Create non-existing directories when using the --outdir option
  with patool extract.
  Closes: GH bug #117, #132
* Ensure log output does not have a UnicodeEncodeError
  Closes: GH bug #122, #121, #29
* Don't open new console windows for subprocesses on Windows.
  Closes: GH bug #85
* Use 7z to extract, list and test CHM (.chm) archives.
  Closes: GH bug #78


1.14.0 (released 25.10.2023)

* Test if tar supports --force-local on macOS systems.
  Closes: GH bug #125
* Enable archive header encryption for 7z
  Thanks to Michael Serajnik for the initial patch.
  Closes: GH bug #102
* Added support for BZIP3 archives with the bzip3 tool.
  Closes: GH bug #129
* Fix Windows tar doesn't use --force-local
  Thanks to Jack Cherng for the patch.
* Include tests data in the source distribution.
  Thanks to Alfred Wingate for the patch.


1.13 (released 24.10.2023)

* Added support for ZSTANDARD archives with the zstd tool.
* Improved patool diff output: when two archives each have
  only one entry, compare those entries directly instead of
  the parent directory.
* Replace deprecated distutils with setuptools to fix build errors
  with modern Python environments.
  Closes: GH bug #114, #103
* Disable password prompting with 7z in non-interactive mode with
  the option "-p-".
  Thanks to Pascua Theus for the patch.
* Disable sandbox mode for file(1) to fix detection of compressed tar
  archives on systems with libseccomp.
  Thanks to Alfred Wingate for the patch.
* Remove read-only directories after a diff comparison of two archives.
  Thanks to c01o for the patch.


1.12 (released 17.1.2016)

* Add winrar to default search path on Windows.
* Improve usage documentation on Windows.
  Closes: GH bug #19


1.11 (released 9.1.2016)
